management/monitoring/009-grafana-ingress.yaml
---
###################################################
# Grafana Service
###################################################
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: grafana


---
###################################################
# Grafana Ingres
###################################################
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: {YOUR-HOST-NAME}
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
